shiro-lang/src/generated-sources/java/shiro/interpreter/ShiroParser.java
// Generated from /home/elrond/Workspace/Code/Shiro/shiro-lang/src/main/java/shiro/interpreter/Shiro.g4 by ANTLR 4.1
package shiro.interpreter;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ShiroParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__10=1, T__9=2, T__8=3, T__7=4, T__6=5, T__5=6, T__4=7, T__3=8, T__2=9, 
		T__1=10, T__0=11, PROD_OP=12, STATE=13, SUBJ_NODE=14, NODE=15, SUBJUNCT=16, 
		BEGIN=17, END=18, OR_OP=19, PLUS_OP=20, MINUS_OP=21, MULT_OP=22, DIV_OP=23, 
		MOD_OP=24, LSQUARE=25, RSQUARE=26, STRING_LITERAL=27, NUMBER=28, IDENT=29, 
		WS=30, COMMENT=31, LINE_COMMENT=32, NEWLINE=33;
	public static final String[] tokenNames = {
		"<INVALID>", "'eval'", "')'", "'.'", "','", "'('", "'Graph'", "'Comment'", 
		"'graph'", "'Parent'", "'Time'", "'port'", "PROD_OP", "'state'", "'subjunctive node'", 
		"'node'", "'subjunct'", "'begin'", "'end'", "'|'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'['", "']'", "STRING_LITERAL", "NUMBER", "IDENT", "WS", 
		"COMMENT", "LINE_COMMENT", "NEWLINE"
	};
	public static final int
		RULE_shiro = 0, RULE_statement = 1, RULE_statestmt = 2, RULE_stateHeader = 3, 
		RULE_stateTimeStmt = 4, RULE_stateCommentStmt = 5, RULE_stateParentStmt = 6, 
		RULE_stateGraphStmt = 7, RULE_stateName = 8, RULE_time = 9, RULE_comment = 10, 
		RULE_stateParent = 11, RULE_stateGraph = 12, RULE_nodestmt = 13, RULE_nodeType = 14, 
		RULE_nodeInternal = 15, RULE_sNode = 16, RULE_subjunctDeclNodeProd = 17, 
		RULE_subjunctDecl = 18, RULE_subjunctSelector = 19, RULE_graphDecl = 20, 
		RULE_graphLine = 21, RULE_activeSelector = 22, RULE_nodeProduction = 23, 
		RULE_activation = 24, RULE_portAssignment = 25, RULE_portDecl = 26, RULE_portDeclInit = 27, 
		RULE_portstmt = 28, RULE_portName = 29, RULE_portType = 30, RULE_mfCall = 31, 
		RULE_mfName = 32, RULE_mfparams = 33, RULE_expression = 34, RULE_path = 35, 
		RULE_pathIndex = 36, RULE_expr = 37;
	public static final String[] ruleNames = {
		"shiro", "statement", "statestmt", "stateHeader", "stateTimeStmt", "stateCommentStmt", 
		"stateParentStmt", "stateGraphStmt", "stateName", "time", "comment", "stateParent", 
		"stateGraph", "nodestmt", "nodeType", "nodeInternal", "sNode", "subjunctDeclNodeProd", 
		"subjunctDecl", "subjunctSelector", "graphDecl", "graphLine", "activeSelector", 
		"nodeProduction", "activation", "portAssignment", "portDecl", "portDeclInit", 
		"portstmt", "portName", "portType", "mfCall", "mfName", "mfparams", "expression", 
		"path", "pathIndex", "expr"
	};

	@Override
	public String getGrammarFileName() { return "Shiro.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public ShiroParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ShiroContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ShiroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shiro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterShiro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitShiro(this);
		}
	}

	public final ShiroContext shiro() throws RecognitionException {
		ShiroContext _localctx = new ShiroContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_shiro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76); statement();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 8) | (1L << STATE) | (1L << SUBJ_NODE) | (1L << NODE) | (1L << SUBJUNCT) | (1L << NEWLINE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(ShiroParser.NEWLINE, 0); }
		public NodestmtContext nodestmt() {
			return getRuleContext(NodestmtContext.class,0);
		}
		public StatestmtContext statestmt() {
			return getRuleContext(StatestmtContext.class,0);
		}
		public SNodeContext sNode() {
			return getRuleContext(SNodeContext.class,0);
		}
		public GraphDeclContext graphDecl() {
			return getRuleContext(GraphDeclContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(86);
			switch (_input.LA(1)) {
			case NODE:
			case SUBJUNCT:
				enterOuterAlt(_localctx, 1);
				{
				setState(81); nodestmt();
				}
				break;
			case STATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(82); statestmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 3);
				{
				setState(83); graphDecl();
				}
				break;
			case SUBJ_NODE:
				enterOuterAlt(_localctx, 4);
				{
				setState(84); sNode();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 5);
				{
				setState(85); match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatestmtContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(ShiroParser.NEWLINE, 0); }
		public StateHeaderContext stateHeader() {
			return getRuleContext(StateHeaderContext.class,0);
		}
		public StateNameContext stateName() {
			return getRuleContext(StateNameContext.class,0);
		}
		public TerminalNode STATE() { return getToken(ShiroParser.STATE, 0); }
		public TerminalNode BEGIN() { return getToken(ShiroParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(ShiroParser.END, 0); }
		public StatestmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statestmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterStatestmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitStatestmt(this);
		}
	}

	public final StatestmtContext statestmt() throws RecognitionException {
		StatestmtContext _localctx = new StatestmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statestmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); match(STATE);
			setState(89); stateName();
			setState(90); match(BEGIN);
			setState(91); match(NEWLINE);
			setState(92); stateHeader();
			setState(93); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateHeaderContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(ShiroParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ShiroParser.NEWLINE, i);
		}
		public StateCommentStmtContext stateCommentStmt(int i) {
			return getRuleContext(StateCommentStmtContext.class,i);
		}
		public ActivationContext activation(int i) {
			return getRuleContext(ActivationContext.class,i);
		}
		public List<StateCommentStmtContext> stateCommentStmt() {
			return getRuleContexts(StateCommentStmtContext.class);
		}
		public List<StateParentStmtContext> stateParentStmt() {
			return getRuleContexts(StateParentStmtContext.class);
		}
		public StateGraphStmtContext stateGraphStmt(int i) {
			return getRuleContext(StateGraphStmtContext.class,i);
		}
		public List<StateGraphStmtContext> stateGraphStmt() {
			return getRuleContexts(StateGraphStmtContext.class);
		}
		public List<StateTimeStmtContext> stateTimeStmt() {
			return getRuleContexts(StateTimeStmtContext.class);
		}
		public StateParentStmtContext stateParentStmt(int i) {
			return getRuleContext(StateParentStmtContext.class,i);
		}
		public List<ActivationContext> activation() {
			return getRuleContexts(ActivationContext.class);
		}
		public StateTimeStmtContext stateTimeStmt(int i) {
			return getRuleContext(StateTimeStmtContext.class,i);
		}
		public StateHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterStateHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitStateHeader(this);
		}
	}

	public final StateHeaderContext stateHeader() throws RecognitionException {
		StateHeaderContext _localctx = new StateHeaderContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stateHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(101);
				switch (_input.LA(1)) {
				case 10:
					{
					setState(95); stateTimeStmt();
					}
					break;
				case 7:
					{
					setState(96); stateCommentStmt();
					}
					break;
				case 9:
					{
					setState(97); stateParentStmt();
					}
					break;
				case 6:
					{
					setState(98); stateGraphStmt();
					}
					break;
				case IDENT:
					{
					setState(99); activation();
					}
					break;
				case NEWLINE:
					{
					setState(100); match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 6) | (1L << 7) | (1L << 9) | (1L << 10) | (1L << IDENT) | (1L << NEWLINE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateTimeStmtContext extends ParserRuleContext {
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public StateTimeStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateTimeStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterStateTimeStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitStateTimeStmt(this);
		}
	}

	public final StateTimeStmtContext stateTimeStmt() throws RecognitionException {
		StateTimeStmtContext _localctx = new StateTimeStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stateTimeStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); match(10);
			setState(106); time();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateCommentStmtContext extends ParserRuleContext {
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public StateCommentStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateCommentStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterStateCommentStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitStateCommentStmt(this);
		}
	}

	public final StateCommentStmtContext stateCommentStmt() throws RecognitionException {
		StateCommentStmtContext _localctx = new StateCommentStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stateCommentStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); match(7);
			setState(109); comment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateParentStmtContext extends ParserRuleContext {
		public StateParentContext stateParent() {
			return getRuleContext(StateParentContext.class,0);
		}
		public StateParentStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateParentStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterStateParentStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitStateParentStmt(this);
		}
	}

	public final StateParentStmtContext stateParentStmt() throws RecognitionException {
		StateParentStmtContext _localctx = new StateParentStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_stateParentStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); match(9);
			setState(112); stateParent();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateGraphStmtContext extends ParserRuleContext {
		public StateGraphContext stateGraph() {
			return getRuleContext(StateGraphContext.class,0);
		}
		public StateGraphStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateGraphStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterStateGraphStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitStateGraphStmt(this);
		}
	}

	public final StateGraphStmtContext stateGraphStmt() throws RecognitionException {
		StateGraphStmtContext _localctx = new StateGraphStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stateGraphStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(6);
			setState(115); stateGraph();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateNameContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(ShiroParser.IDENT, 0); }
		public StateNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterStateName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitStateName(this);
		}
	}

	public final StateNameContext stateName() throws RecognitionException {
		StateNameContext _localctx = new StateNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stateName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(ShiroParser.STRING_LITERAL, 0); }
		public TimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitTime(this);
		}
	}

	public final TimeContext time() throws RecognitionException {
		TimeContext _localctx = new TimeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_time);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(ShiroParser.STRING_LITERAL, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitComment(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_comment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateParentContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(ShiroParser.IDENT, 0); }
		public StateParentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateParent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterStateParent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitStateParent(this);
		}
	}

	public final StateParentContext stateParent() throws RecognitionException {
		StateParentContext _localctx = new StateParentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_stateParent);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateGraphContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(ShiroParser.IDENT, 0); }
		public StateGraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateGraph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterStateGraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitStateGraph(this);
		}
	}

	public final StateGraphContext stateGraph() throws RecognitionException {
		StateGraphContext _localctx = new StateGraphContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_stateGraph);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125); match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodestmtContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(ShiroParser.NEWLINE, 0); }
		public NodeInternalContext nodeInternal() {
			return getRuleContext(NodeInternalContext.class,0);
		}
		public NodeTypeContext nodeType() {
			return getRuleContext(NodeTypeContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(ShiroParser.BEGIN, 0); }
		public TerminalNode IDENT() { return getToken(ShiroParser.IDENT, 0); }
		public ActiveSelectorContext activeSelector() {
			return getRuleContext(ActiveSelectorContext.class,0);
		}
		public TerminalNode END() { return getToken(ShiroParser.END, 0); }
		public NodestmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodestmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterNodestmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitNodestmt(this);
		}
	}

	public final NodestmtContext nodestmt() throws RecognitionException {
		NodestmtContext _localctx = new NodestmtContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_nodestmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); nodeType();
			setState(128); match(IDENT);
			setState(133);
			_la = _input.LA(1);
			if (_la==LSQUARE) {
				{
				setState(129); match(LSQUARE);
				setState(130); activeSelector();
				setState(131); match(RSQUARE);
				}
			}

			setState(135); match(BEGIN);
			setState(136); match(NEWLINE);
			setState(137); nodeInternal();
			setState(138); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeTypeContext extends ParserRuleContext {
		public TerminalNode SUBJUNCT() { return getToken(ShiroParser.SUBJUNCT, 0); }
		public TerminalNode NODE() { return getToken(ShiroParser.NODE, 0); }
		public NodeTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterNodeType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitNodeType(this);
		}
	}

	public final NodeTypeContext nodeType() throws RecognitionException {
		NodeTypeContext _localctx = new NodeTypeContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_nodeType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_la = _input.LA(1);
			if ( !(_la==NODE || _la==SUBJUNCT) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeInternalContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(ShiroParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ShiroParser.NEWLINE, i);
		}
		public PortstmtContext portstmt(int i) {
			return getRuleContext(PortstmtContext.class,i);
		}
		public List<PortstmtContext> portstmt() {
			return getRuleContexts(PortstmtContext.class);
		}
		public NodeProductionContext nodeProduction(int i) {
			return getRuleContext(NodeProductionContext.class,i);
		}
		public List<PortAssignmentContext> portAssignment() {
			return getRuleContexts(PortAssignmentContext.class);
		}
		public List<NodeProductionContext> nodeProduction() {
			return getRuleContexts(NodeProductionContext.class);
		}
		public PortAssignmentContext portAssignment(int i) {
			return getRuleContext(PortAssignmentContext.class,i);
		}
		public NodeInternalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeInternal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).enterNodeInternal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiroListener ) ((ShiroListener)listener).exitNodeInternal(this);
		}
	}

	public final NodeInternalContext nodeInternal() throws RecognitionException {
		NodeInternalContext _localctx = new NodeInternalContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_nodeInternal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(146);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(142); nodeProduction();
					}
					break;

				case 2:
					{
					setState(143); portAssignment();
					}
					break;

				case 3:
					{
					setState(144); portstmt();
					}
					break;
